--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="stylesheet" type="text/css" href="CSS/Login.css">
 	</head>
 	<body>
-		<div id="wrapper">
-			<br>
+		<div id="header">
+			<img src="Title.png" />
+		</div>
+		<div id="content">
 			<br>
 			<br>
 			<br>
 			<div id="login">
 				<br>
-				<div id="Login_ID_CSS">
-					請輸入帳號：
-					<input type="text" name="Login_ID">
-				</div>
+				<span style="font-family:Microsoft JhengHei;"> 請輸入帳號：<input type="text" name="Login_ID"> </span>
 				<br>
-				<div id="Login_PWD_CSS">
-					請輸入密碼：
-					<input type="text" name="Login_PWD">
-				</div>
 				<br>
-				<input type="submit" value="Login" id="Login_Button">
-				</form>
+				<span style="font-family:Microsoft JhengHei;"> 請輸入密碼：<input type="text" name="Login_PWD"> </span>
+				<br>
+				<br>
+				<span style="font-family:Microsoft JhengHei;"> <input type="submit" value="Login"> </span>
 			</div>
+		</div>
+		<div id="bottom">
+			<img src="co.png" />
 		</div>
 	</body>
 </html>
