--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 				<span style="font-family:Microsoft JhengHei;"> 請輸入密碼：<input type="text" name="Login_PWD"> </span>
 				<br>
 				<br>
-				<span style="font-family:Microsoft JhengHei;"> <input type="submit" value="Login"> </span>
+				<span style="font-family:Microsoft JhengHei;">
+					<input type="submit" value="登入系統">
+					<input type="button" value="忘記密碼" onclick="window.alert('你最好想起來! 沒想起來就開除 ＝ ＝凸')">
+				</span>
 			</div>
 		</div>
 		<div id="bottom">
