--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>工廠電子差勤系統</title>
-		<link rel="stylesheet" type="text/css" href="CSS/Login.css">
+
+        <!-- 最新編譯和最佳化的 CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+        
+        <!-- 選擇性佈景主題 -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+        
+        <!-- 最新編譯和最佳化的 JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="myjs.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="CSS/Login.css">
 	</head>
 	<body>
 		<div id="header">
 			<img src="Title.png" />
 		</div>
 		<div id="content">
-			<br>
-			<br>
-			<br>
 			<div id="login">
-				<br>
-				<span style="font-family:Microsoft JhengHei;"> 請輸入帳號：<input type="text" name="Login_ID"> </span>
-				<br>
-				<br>
-				<span style="font-family:Microsoft JhengHei;"> 請輸入密碼：<input type="text" name="Login_PWD"> </span>
-				<br>
-				<br>
-				<span style="font-family:Microsoft JhengHei;"> <input type="submit" value="Login"> </span>
+			  <form id="toinput" action="userinfo.php" method="post">
+              <label>帳號ID</label><br>
+              <input name = "id" type="text" class="form-control" id="userid" style="width:80%;text-align: center;margin:0 auto;"/>
+              <label>密碼</label><br>
+              <input class="form-control" id="pass" type="password" name = "password" style="width:80%;text-align: center;margin:0 auto;"/>
+              <br>
+              <input name="送出" type="submit" class="btn btn-success" id="btn" value="登入"/>
+              </form>
 			</div>
 		</div>
 		<div id="bottom">
